update promo label

--- a/dshop/templates/theme/default/pages/produits.html
+++ b/dshop/templates/theme/default/pages/produits.html
@@ -248,7 +248,7 @@
                                                     {% dm_variants_is_discounted product.variants as variants_isdiscounted %}
                                                     {% if variants_outofstock %}
                                                         <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
-                                                    {% elif variants_isdiscounted %}
+                                                    {% elif variants_isdiscounted or real_price != product.variants.first.unit_price %}
                                                         <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                                                     {% endif %}
                                                 {% else %}
@@ -260,7 +260,7 @@
                                                 {% endif %}
                                                 {% if product.quantity == 0 %}
                                                     <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
-                                                {% elif product.is_discounted %}
+                                                {% elif product.is_discounted or real_price != product.unit_price %}
                                                     <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                                                 {% endif %}
                                             </div>
