--- a/dshop/templates/theme/default/plugins/products-vedette.html
+++ b/dshop/templates/theme/default/plugins/products-vedette.html
@@ -93,7 +93,7 @@
                             {% dm_variants_is_discounted product.variants as variants_isdiscounted %}
                             {% if variants_outofstock %}
                                 <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
-                            {% elif variants_isdiscounted %}
+                            {% elif variants_isdiscounted or real_price != product.variants.first.unit_price %}
                                 <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                             {% endif %}
                         {% else %}
@@ -104,10 +104,11 @@
                         {% endif %}
                         {% endif %}
                         {% if product.quantity == 0 %}
-                        <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
-                        {% elif product.is_discounted %}
-                        <span class="product_sale_discounted">{% trans "Discounted" %}</span>
+                            <span class="product_sale_outofstock">{% trans "Out of stock" %}</span>
+                        {% elif product.is_discounted or real_price != product.unit_price %}
+                            <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                         {% endif %}
+                        aaa{{product.is_discounted}}
                     </div>
                   {% endif %}
                 </div>
