align start products

--- a/dshop/templates/theme/default/pages/produits.html
+++ b/dshop/templates/theme/default/pages/produits.html
@@ -71,7 +71,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row dmalign-start">
                         <div class="col-md-2 mb-5">
                             <div class="dmfilters-list">
                                 {% if filter_data.brands|length > 0 %}
