fix brand checkbox

--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -988,7 +988,7 @@ main > .container > .row {
     right:0;
 }
 .dmfilters-list .toggle:hover{
-    background-color:#48a89e;
+    background-color:#f16975;
     color:#fff;
     cursor:pointer;
 }
