--- a/dshop/templates/theme/default/navbar/menu-main-child.html
+++ b/dshop/templates/theme/default/navbar/menu-main-child.html
@@ -7,7 +7,11 @@
 <ul class="dm-main-submenu">
     {% for c in children %}
         <li>
-            <a href="{% if c.attr %}{{ c.attr.redirect_url|default:c.get_absolute_url }}{% else %}/{{ LANGUAGE_CODE }}/produits/category/{{c.id}}-{{c.name|slugify}}{% endif %}" class="menu-link{% if c.selected %} selected{% endif %}{% if c.children %} parent{% endif %}">
+            {% if LANGUAGE_CODE == "fr" %}
+                <a href="{% if c.attr %}{{ c.attr.redirect_url|default:c.get_absolute_url }}{% else %}/{{ LANGUAGE_CODE }}/produits/category/{{c.id}}-{{c.name|slugify}}{% endif %}" class="menu-link{% if c.selected %} selected{% endif %}{% if c.children %} parent{% endif %}">
+            {% else %}
+                <a href="{% if c.attr %}{{ c.attr.redirect_url|default:c.get_absolute_url }}{% else %}/{{ LANGUAGE_CODE }}/products/category/{{c.id}}-{{c.name|slugify}}{% endif %}" class="menu-link{% if c.selected %} selected{% endif %}{% if c.children %} parent{% endif %}">
+            {% endif %}
                 {% if c.attr %}
                     {{c.get_menu_title}}
                 {% elif c.name %}
@@ -22,7 +26,11 @@
                         {% for subchild in child_categories %}
                             {% dm_get_category_by_category subchild.id as subchild_categories %}
                             <li>
+                                {% if LANGUAGE_CODE == "fr" %}
                                 <a href="/{{ LANGUAGE_CODE }}/produits/category/{{subchild.id}}-{{subchild.name|slugify}}" class="menu-link">
+                                {% else %}
+                                <a href="/{{ LANGUAGE_CODE }}/products/category/{{subchild.id}}-{{subchild.name|slugify}}" class="menu-link">
+                                {% endif %}
                                     {{subchild.name}}
                                 </a>
                                 {% if subchild_categories %}
@@ -30,7 +38,11 @@
                                     <ul class="dm-main-submenu sub">
                                         {% for subsubchild in subchild_categories %}
                                             <li>
+                                                {% if LANGUAGE_CODE == "fr" %}
                                                 <a href="/{{ LANGUAGE_CODE }}/produits/category/{{subsubchild.id}}-{{subsubchild.name|slugify}}" class="menu-link">
+                                                {% else %}
+                                                <a href="/{{ LANGUAGE_CODE }}/products/category/{{subsubchild.id}}-{{subsubchild.name|slugify}}" class="menu-link">
+                                                {% endif %}
                                                     {{subsubchild.name}}
                                                 </a>
                                             </li>
