--- a/dshop/templates/dshop/pages/drawer-cart.html
+++ b/dshop/templates/dshop/pages/drawer-cart.html
@@ -1,11 +1,13 @@
+{% load i18n %}
+
 <div class="dm-drawer-inner">
-  <h2 class="drawer-title">Mon panier<span class="drawer-count">, <span id="drawer-items-count">0 produit</span></span></h2>
+  <h2 class="drawer-title">{% trans "My Cart" %}<span class="drawer-count">, <span id="drawer-items-count">0 {% trans "product" %}</span></span></h2>
   <div id="drawer-items-list"></div>
 </div>
 <div class="dm-drawer-bottom">
   <div class="dm-drawer-total">
-    <span>Sous-total :</span>
+    <span>{% trans "Subtotal" %} :</span>
     <span id="dm-drawer-price">0$</span>
   </div>
-  <a href="/commande" class="btn btn-fill-out d-block btn-order">Commander</a>
+  <a href="/commande" class="btn btn-fill-out d-block btn-order">{% trans "Order" %}</a>
 </div>
