--- a/dshop/templates/theme/default/catalog/product-detail.html
+++ b/dshop/templates/theme/default/catalog/product-detail.html
@@ -211,7 +211,7 @@
                             <ul class="nav nav-tabs" role="tablist">
                                 {% if product.description %}
                                 <li class="nav-item">
-                                    <a class="nav-link active" id="Description-tab" data-toggle="tab" href="#Description" role="tab" aria-controls="Description" aria-selected="true">Description</a>
+                                    <a class="nav-link active" id="Description-tab" data-toggle="tab" href="#Description" role="tab" aria-controls="Description" aria-selected="true">{% trans "Description" %}</a>
                                 </li>
                                 {% endif %}
                             </ul>
@@ -238,7 +238,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="heading_s1">
-                            <h3>Produits Similaires</h3>
+                            <h3>{% trans "Related Products" %}</h3>
                             </div>
                             <div class="releted_product_slider carousel_slider owl-carousel owl-theme" data-margin="20" data-responsive='{"0":{"items": "1"}, "481":{"items": "2"}, "768":{"items": "3"}, "1199":{"items": "4"}}'>
                             {% for related in related_products.products %}
