--- a/dshop/templates/theme/default/pages/contact.html
+++ b/dshop/templates/theme/default/pages/contact.html
@@ -91,7 +91,7 @@
               </div>
               <div class="col-md-12">
                 <button type="submit" title="Envoyer" class="btn btn-fill-out" id="submitButton" name="submit"
-                  value="Submit">Envoyer</button>
+                  value="Submit">{% trans "Send" %}</button>
               </div>
               <div class="col-md-12">
                 <div id="alert-msg" class="alert-msg text-center"></div>
