--- a/dshop/templates/theme/default/pages/contact.html
+++ b/dshop/templates/theme/default/pages/contact.html
@@ -71,16 +71,16 @@
             {% csrf_token %}
             <div class="row">
               <div class="form-group col-md-6">
-                <input required placeholder="Nom" id="name" class="form-control" name="name" type="text">
+                <input required placeholder={% trans "Name" %} id="name" class="form-control" name="name" type="text">
               </div>
               <div class="form-group col-md-6">
-                <input required placeholder="Courriel" id="email" class="form-control" name="email" type="email">
+                <input required placeholder={% trans "Email" %} id="email" class="form-control" name="email" type="email">
               </div>
               <div class="form-group col-md-6">
-                <input required placeholder="Téléphone" id="phone" class="form-control" name="phone">
+                <input required placeholder={% trans "Phone" %} id="phone" class="form-control" name="phone">
               </div>
               <div class="form-group col-md-6">
-                <input placeholder="Sujet" id="subject" class="form-control" name="subject">
+                <input placeholder={% trans "Subject" %} id="subject" class="form-control" name="subject">
               </div>
               <div class="form-group col-md-12">
                 <textarea required placeholder="Message" id="description" class="form-control" name="message"
