--- a/dshop/templates/theme/default/catalog/product-detail.html
+++ b/dshop/templates/theme/default/catalog/product-detail.html
@@ -1,7 +1,7 @@
 {% extends "theme/default/pages/default.html" %}
 {% load i18n cms_tags sekizai_tags thumbnail dshop_tags dmrabais_tags %}
 
-{% block title %}{{ product.product_name }}{% endblock %}
+{% block title %}{{ product.product_name_trans }}{% endblock %}
 
 {% block meta-description %}{{ product.caption|striptags|truncatechars:150 }}{% endblock %}
 
@@ -17,7 +17,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-6">
                         <div class="page-title">
-                            <h1>{% render_model product "product_name" %}</h1>
+                            <h1>{% render_model product "product_name_trans" %}</h1>
                         </div>
                     </div>
                     <div class="col-md-6 text-md-right">
@@ -97,7 +97,7 @@
                         <div class="pr_detail">
                             <div class="product_description">
                                 <h4 class="product_title">
-                                    {% render_model product "product_name" %}
+                                    {% render_model product "product_name_trans" %}
                                     {% if product.variants.first %}
                                         <span class="variant-tag">
                                             {% if product.variants.first.is_discounted %}
@@ -250,7 +250,7 @@
                                         {% thumbnail related.main_image 540x600 background="#ffffff" upscale as thumb %}
                                         <img src="{{thumb.url}}" alt="product_img1" />
                                         {% else %}
-                                            <img src="https://via.placeholder.com/540x600/ececec/ececec" alt="{{related.product_name}}" />
+                                            <img src="https://via.placeholder.com/540x600/ececec/ececec" alt="{{related.product_name_trans}}" />
                                         {% endif %}
                                     </a>
                                     <div class="product_action_box">
@@ -269,7 +269,7 @@
                                     </div>
                                     </div>
                                     <div class="product_info">
-                                    <h6 class="product_title"><a href="{{related.get_absolute_url}}">{{related.product_name|truncatechars:45}}</a></h6>
+                                    <h6 class="product_title"><a href="{{related.get_absolute_url}}">{{related.product_name_trans|truncatechars:45}}</a></h6>
                                     <div class="product_price">
                                         {% if related.variants %}
                                         {% product_variant_discount_price related.variants.first.id as real_price %}
