--- a/dshop/templates/theme/default/pages/produits.html
+++ b/dshop/templates/theme/default/pages/produits.html
@@ -189,12 +189,12 @@
                                             <a href="{{product.get_absolute_url}}">
                                             {% if product.main_image %}
                                                 {% thumbnail product.main_image 540x600 background="#ffffff" upscale as thumb %}
-                                                <img src="{{thumb.url}}" alt="{{product.product_name}}">
+                                                <img src="{{thumb.url}}" alt="{{product.product_name_trans}}">
                                             {% elif product.images.first %}
                                                 {% thumbnail product.images.first 540x600 background="#ffffff" upscale as thumb %}
-                                                <img src="{{thumb.url}}" alt="{{product.product_name}}">
+                                                <img src="{{thumb.url}}" alt="{{product.product_name_trans}}">
                                             {% else %}
-                                                <img src="https://via.placeholder.com/540x600/f7f8fb/f7f8fb" alt="{{product.product_name}}">
+                                                <img src="https://via.placeholder.com/540x600/f7f8fb/f7f8fb" alt="{{product.product_name_trans}}">
                                             {% endif %}
                                             </a>
                                             <div class="product_action_box">
@@ -234,7 +234,7 @@
                                             {% endif %}
                                         </div>
                                         <div class="product_info">
-                                            <h6 class="product_title"><a href="{{product.get_absolute_url}}">{{product.product_name}}</a></h6>
+                                            <h6 class="product_title"><a href="{{product.get_absolute_url}}">{{product.product_name_trans}}</a></h6>
                                             <div class="product_price">
                                                 {% if product.variants %}
                                                     {% if product.variants.first %}
