--- a/dshop/templates/theme/default/catalog/product-detail.html
+++ b/dshop/templates/theme/default/catalog/product-detail.html
@@ -24,7 +24,7 @@
                         {% if product.categories.count > 0 %}
                             <div class="breadcrumbs-item">
                                 {% for category in product.categories.all %}
-                                    <a href="{% if produits_url %}{{ url_produits }}{% else %}/produits/{% endif %}category/{{category.id}}-{{category.name|slugify}}">{{category.name}}</a>
+                                    <a href="{% if produits_url %}{{ url_produits }}{% else %}/produits/{% endif %}category/{{category.id}}-{{category.name|slugify}}">{{category.name_trans}}</a>
                                 {% endfor %}
                             </div>
                         {% endif %}
