Search page product name in translated field

--- a/dshop/templates/theme/default/pages/search.html
+++ b/dshop/templates/theme/default/pages/search.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-6 col-md-7 search-name">
                         <div>
-                            <span>{{p.product_name}}</span>
+                            <span>{{p.product_name_trans}}</span>
                             <span>{{p.caption|striptags}}</span>
                         </div>
                     </div>
