--- a/dshop/templates/theme/default/email/order-detail.html
+++ b/dshop/templates/theme/default/email/order-detail.html
@@ -38,7 +38,7 @@
 				{{ item.quantity }} &times;
 			</td>
 			<td colspan="2" style="padding: 20px 10px; border-bottom: 2px solid #eee;">
-				<div style="font-size: 120%; font-weight: bold;">{{ item.summary.product_name }}</div>
+				<div style="font-size: 120%; font-weight: bold;">{{ item.summary.product_name_trans }}</div>
                 {% if item.extra.variables and item.extra.variables.attributes %}
                     <div style="font-size:80%;font-weight:lighter;">
                         {% for attribute in item.extra.variables.attributes %}
