--- a/dshop/templates/theme/default/email/customer_order_receipt.html
+++ b/dshop/templates/theme/default/email/customer_order_receipt.html
@@ -1,6 +1,6 @@
 {% extends "theme/default/email/base.html" %}
 
-{% block email-title %}Merci d'avoir commandé sur D-Shop{% endblock %}
+{% block email-title %}{% trans "Thank you for your order at D-Shop" %}{% endblock %}
 
 {% block email-head %}
   {{ block.super }}
