--- a/dshop/templates/theme/default/email/quotation-receipt.html
+++ b/dshop/templates/theme/default/email/quotation-receipt.html
@@ -1,6 +1,6 @@
 {% extends "theme/default/email/base.html" %}
 
-{% block email-title %}Une nouvelle commande vient d'être effectuée sur D-Shop{% endblock %}
+{% block email-title %}{% trans "A new order has just been done at D-Shop" %}{% endblock %}
 
 {% block email-head %}
   {{ block.super }}
