--- a/dshop/templates/theme/default/email/customer_shipped_receipt.html
+++ b/dshop/templates/theme/default/email/customer_shipped_receipt.html
@@ -1,6 +1,6 @@
 {% extends "theme/default/email/base.html" %}
 
-{% block email-title %}Bonjour, votre commande #{{ order.number }} à bien été expédiée. Au plaisir de vous revoir dans notre boutique en ligne très bientôt ! {% endblock %}
+{% block email-title %}{% trans "Hello, your order"%} #{{ order.number }} {% trans "has been shipped. We look forward to seeing you again in our online store very soon" %} {% endblock %}
 
 {% block email-order-caption %}
   {{ block.super }}
