--- a/dshop/templates/theme/default/email/quotation-receipt.html
+++ b/dshop/templates/theme/default/email/quotation-receipt.html
@@ -1,4 +1,5 @@
 {% extends "theme/default/email/base.html" %}
+{% load static i18n sekizai_tags %}
 
 {% block email-title %}{% trans "A new order has just been done at D-Shop" %}{% endblock %}
 
