--- a/dshop/templates/theme/default/email/customer_order_receipt.html
+++ b/dshop/templates/theme/default/email/customer_order_receipt.html
@@ -1,4 +1,6 @@
 {% extends "theme/default/email/base.html" %}
+{% load static i18n sekizai_tags %}
+
 
 {% block email-title %}{% trans "Thank you for your order at D-Shop" %}{% endblock %}
 
