--- a/dshop/templates/theme/default/email/customer_shipped_receipt.html
+++ b/dshop/templates/theme/default/email/customer_shipped_receipt.html
@@ -1,4 +1,5 @@
 {% extends "theme/default/email/base.html" %}
+{% load static i18n sekizai_tags %}
 
 {% block email-title %}{% trans "Hello, your order"%} #{{ order.number }} {% trans "has been shipped. We look forward to seeing you again in our online store very soon" %} {% endblock %}
 
