--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -88,7 +88,7 @@ main > .container > .row {
     width: 100%;
     height: 40px;
     position: relative;
-    z-index: 110;
+    z-index: 111;
 }
 #topbar .topbar-wrapper {
     box-sizing: border-box;
@@ -434,6 +434,43 @@ main > .container > .row {
     .dm-main-submenu li .dm-menu-toggle {
         padding: 6px 13px 9px 9px;
     }
+}
+
+/* ===--- TopLanguage ---=== */
+.dm-choose-language {
+    display: inline-block;
+    position: relative;
+}
+.dm-choose-language > span {
+    text-transform: uppercase;
+    margin-left: 1rem;
+}
+.dm-choose-language > span:hover {
+    color: #f16975;
+    cursor: pointer;
+}
+.dm-choose-language-wrapper {
+    background-color: #eee;
+    border-bottom: 2px solid #000;
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: -15px;
+    padding: 15px;
+}
+.dm-choose-language:hover .dm-choose-language-wrapper {
+    display: inline-block;
+}
+.dm-choose-language ul,
+.dm-choose-language li {
+    list-style: none;
+}
+.dm-choose-language-wrapper li + li {
+    padding: 1rem 0 0;
+}
+.dm-choose-language-wrapper li a {
+    display: block;
+    padding: 5px 1.3rem 0;
 }
 
 /* ===--- TopSearch ---=== */
