--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -86,7 +86,7 @@ main > .container > .row {
     vertical-align: middle;
     display: inline-block;
     width: 100%;
-    height: 40px;
+    min-height: 120%;
     position: relative;
     z-index: 111;
 }
@@ -99,22 +99,26 @@ main > .container > .row {
 }
 #topbar .topbar-left {
     text-align: left;
-    float: left;
+    vertical-align: middle;
+    display: inline-block;
+    width: 20%;
     height: 100%;
     position: relative;
     z-index: 2;
 }
 #topbar .topbar-center {
     text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    width: 60%;
     height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 0;
     z-index: 1;
 }
 #topbar .topbar-right {
     text-align: right;
-    float: right;
+    vertical-align: middle;
+    display: inline-block;
+    width: 20%;
     height: 100%;
     position: relative;
     z-index: 2;
@@ -132,16 +136,11 @@ main > .container > .row {
     margin: 0 0.5rem;
 }
 #topbar .topbar-center > span {
-    line-height: 40px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    line-height: 120%;
     display: inline-block;
     width: 80%;
     height: 100%;
-    position: absolute;
-    left: 0.5rem;
-    right: 0.5rem;
+    padding: 10px 0;
     margin: 0 auto;
 }
 #topbar a {
@@ -153,8 +152,11 @@ main > .container > .row {
 
 @media (max-width: 1023px) {
     #topbar .topbar-left,
-    #topbar .topbar-right {
+    #topbar .topbar-right > span {
         display: none;
+    }
+    #topbar .topbar-center {
+        width: 80%;
     }
 }
 
