test change easy

--- a/templates/plugins/bloc-slider-child.html
+++ b/templates/plugins/bloc-slider-child.html
@@ -2,7 +2,7 @@
 
 {% if instance.image %}
   {% thumbnail instance.image "1920x500" crop upscale as thumb %}
-  <div class="carousel-item background_bg{% if loop %} active{% endif %}" data-img-src="{{thumb.url}}">
+  <div class="carousel-item background_bg{% if loop %} active{% endif %}" data-img-src="{% thumbnail instance.image 1920x500 crop %}">
 {% else %}
   <div class="carousel-item background_bg" style="background-color:{{instance.bg_color}};">
 {% endif %}
