--- a/apps/dmAdminTheme/templates/admin/base.html
+++ b/apps/dmAdminTheme/templates/admin/base.html
@@ -97,7 +97,7 @@
                         {% endif %}
                         <div class="col-12 {% if not is_popup %}col-md-10{% endif %} dm-admin-main">
                             {% if not is_popup %}
-                                <div class="container-fluid">
+                                <div class="container-fluid dm-admin-header">
                                     <div class="row">
                                         {% if request.user.is_authenticated %}
                                             <div class="col-6">
