--- a/dshop/static/dshop/css/dmodules.css
+++ b/dshop/static/dshop/css/dmodules.css
@@ -646,23 +646,28 @@ main > .container > .row {
 .dm-drawer-inner #drawer-items-list .col-3 {
     padding-right: 0;
 }
-.dm-drawer-inner #drawer-items-list ul{
+.dm-drawer-inner #drawer-items-list ul,
+.dm-drawer-inner #drawer-quotation-items-list ul{
   list-style:none;
 }
-.dm-drawer-inner #drawer-items-list li{
+.dm-drawer-inner #drawer-items-list li,
+.dm-drawer-inner #drawer-quotation-items-list li{
   padding:1rem 0;
 }
-.dm-drawer-inner #drawer-items-list li + li{
+.dm-drawer-inner #drawer-items-list li + li,
+.dm-drawer-inner #drawer-quotation-items-list li + li{
   border-top:1px solid rgba(150, 140, 173, 0.2);
 }
-.dm-drawer-inner #drawer-items-list .media img{
+.dm-drawer-inner #drawer-items-list .media img,
+.dm-drawer-inner #drawer-quotation-items-list .media img{
   max-width:100%;
   height:auto;
 }
 .dm-drawer-inner #drawer-items-list .media-body{
   display:none;
 }
-.dm-drawer-inner #drawer-items-list .col-8 a{
+.dm-drawer-inner #drawer-items-list .col-8 a,
+.dm-drawer-inner #drawer-quotation-items-list .col-8 a{
   color:#f16975;
   font-size:1rem;
   font-weight:800;
@@ -674,10 +679,12 @@ main > .container > .row {
   transition:color 0.3s;
   margin: 0;
 }
-.dm-drawer-inner #drawer-items-list a:hover{
+.dm-drawer-inner #drawer-items-list a:hover,
+.dm-drawer-inner #drawer-quotation-items-list a:hover{
   color:#000;
 }
-.dm-drawer-inner #drawer-items-list .drawer-cart-attributes {
+.dm-drawer-inner #drawer-items-list .drawer-cart-attributes,
+.dm-drawer-inner #drawer-quotation-items-list .drawer-cart-attributes {
     font-size: 0.8rem;
     margin: 0 0 0.5rem;
 }
@@ -701,14 +708,16 @@ main > .container > .row {
   font-size:20px;
   text-align:right;
 }
-.dm-drawer-inner #drawer-items-list a.dm-item-delete{
+.dm-drawer-inner #drawer-items-list a.dm-item-delete,
+.dm-drawer-inner #drawer-quotation-items-list a.dm-item-delete{
   color:#e64141;
   position:absolute;
   top:0;
   right:-18px;
   padding:2px 10px;
 }
-.dm-drawer-inner #drawer-items-list a.dm-item-delete:hover{
+.dm-drawer-inner #drawer-items-list a.dm-item-delete:hover,
+.dm-drawer-inner #drawer-quotation-items-list a.dm-item-delete:hover{
   color:#000;
 }
 .dm-drawer-user-logs .default-input{
