--- a/dshop/templates/theme/default/email/q-customer-information.html
+++ b/dshop/templates/theme/default/email/q-customer-information.html
@@ -9,11 +9,11 @@
 		<td style="text-align: left; padding: 10px 15px; border-bottom: 2px solid #eee;">{{ customer.email }}</td>
 	</tr>
 	<tr>
-		<td style="text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee;">{% trans "Email" %}:</td>
+		<td style="text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee;">{% trans "Name" %}:</td>
 		<td style="text-align: left; padding: 10px 15px; border-bottom: 2px solid #eee;">{{ customer.salutation }} {{ customer.first_name }} {{ customer.last_name }}</td>
 	</tr>
 	<tr>
-		<td style="text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee; vertical-align: top;">{% trans "Billing Address" %}:</td>
+		<td style="text-align: right; padding: 10px 15px; border-bottom: 2px solid #eee; vertical-align: top;">{% trans "Shipping Address" %}:</td>
 		<td style="text-align: left; padding: 10px 15px; border-bottom: 2px solid #eee;">
 			<pre style="margin: 0;">{{ shipping }}</pre>
 		</td>
